[gd_scene load_steps=5 format=3 uid="uid://2c7e4tsthixk"]

[ext_resource type="Script" path="res://scenes/register_screen/register_screen_script.gd" id="1_0h1d0"]
[ext_resource type="Theme" uid="uid://d24s1qif08h56" path="res://themes/light_theme.tres" id="3_ct1ue"]
[ext_resource type="PackedScene" uid="uid://cmj3rhes5epv5" path="res://prefab/background.tscn" id="4_tlhia"]
[ext_resource type="AudioStream" uid="uid://c4mmhy14gs7ha" path="res://sounds/gentle_fields_trilha.mp3" id="6_bc1f0"]

[node name="register_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0h1d0")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="musica_fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bc1f0")
volume_db = -10.0
autoplay = true

[node name="Background" parent="." instance=ExtResource("4_tlhia")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ct1ue")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Username" type="LineEdit" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ct1ue")
placeholder_text = "E-mail"

[node name="UsernameErrorMessage" type="Label" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ct1ue")
theme_type_variation = &"ErrorMessage"

[node name="Password" type="LineEdit" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ct1ue")
placeholder_text = "Senha"
secret = true

[node name="PasswordErrorMessage" type="Label" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ct1ue")
theme_type_variation = &"ErrorMessage"

[node name="ConfirmPassword" type="LineEdit" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ct1ue")
placeholder_text = "Confirmar senha"
secret = true

[node name="ConfirmPasswordErrorMessage" type="Label" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ct1ue")
theme_type_variation = &"ErrorMessage"

[node name="PIN" type="LineEdit" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ct1ue")
placeholder_text = "PIN"

[node name="PINErrorMessage" type="Label" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_ct1ue")
theme_type_variation = &"ErrorMessage"

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Create" type="Button" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ct1ue")
text = "Finalizar"
expand_icon = true

[node name="Back" type="Button" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ct1ue")
text = "Voltar"
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -61.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ct1ue")
theme_type_variation = &"VersionLabel"
text = "V: 0.8.0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_request_save_user_data_completed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_create_pressed"]
